--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,20 @@
     --color-secondary: #EF863E,
 }
 
+.scrollbar::-webkit-scrollbar{
+    width: 3px;
+    height: 3px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 0, 0);
+    border-radius: 4px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    background-color: rgb(0, 0, 0);
+}
+
 @layer components {
     .input-box {
         @apply w-full text-sm bg-cyan-600/5 rounded-sm px-5 py-5 mb-4 outline-none
@@ -31,5 +45,18 @@
 
     .icon-btn {
         @apply text-[22px] text-slate-300 cursor-pointer hover:text-red-500
+    }
+
+    .btn-small {
+        @apply flex items-center gap-1 text-xs font-medium bg-cyan-50 text-[#05b6d3] shadow-cyan-100/0 border
+                border-cyan-100 hover:bg-[#05b6d3] hover:text-white rounded-sm px-3 py-[10px]
+    }
+
+    .btn-delete {
+        @apply bg-rose-50 text-rose-500 shadow-rose-100/0 border border-rose-100 hover:bg-rose-500 hover:text-white
+    }
+
+    .input-label {
+        @apply text-xs text-slate-400
     }
 }
